# solitaire-solver

./: .gitignore  Cargo.toml  README.md
crates/solitaire-game/: Cargo.toml
crates/solitaire-game/src/: action.rs  common.rs  deck.rs  lib.rs  state.rs
crates/solitaire-game/src/kplus/: action.rs  mod.rs  state.rs
crates/solitaire-game/src/standard/: action.rs  mod.rs  state.rs
crates/solitaire-solver/: Cargo.toml  bench.py
crates/solitaire-solver/src/: common.rs  greedy.rs  heuristic.rs  lib.rs  move_generation.rs  multistage_nested_rollout.rs  naive.rs  nested_rollout.rs
decks/: 1.txt  11.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  clear-front  solvable  t  tableau-overflow
decks/solutions/: t
src/: image.rs  main.rs  tableau.rs  top_ui.rs
src/game/: kplus.rs  mod.rs  standard.rs
