[package]
name = "solitaire-user"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["crates/solitaire-game", "crates/solitaire-solver"]

[dependencies]
eframe = "0.25.0"
egui = "0.25.0"
egui_extras = { version = "0.25.0", features = ["all_loaders"] }
epaint = "0.25.0"
solitaire-game = { version = "0.1.0", path = "crates/solitaire-game" }
