[package]
name = "solitaire-user"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["crates/solitaire-game", "crates/solitaire-solver"]

[dependencies]
macroquad = "0.4.14"
solitaire-game = { version = "0.1.0", path = "crates/solitaire-game" }
