[package]
name = "solitaire-user"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["crates/solitaire-game", "crates/solitaire-solver"]

[dependencies]
futures = "0.3.31"
macroquad = "0.4.14"
solitaire-game = { version = "0.2.0", path = "crates/solitaire-game", features = ["standard", "kplus"] }
solitaire-solver = { version = "0.1.0", path = "crates/solitaire-solver" }

[patch.crates-io]
miniquad = { git = "https://github.com/beaconbrigade/miniquad", branch = "double-click-patch" }

[profile.profiling]
inherits = "release"
debug = true
