[package]
name = "solitaire-game"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["standard"]
standard = []
kplus = []
serde = ["dep:serde", "dep:serde_json"]

[dependencies]
rand = "0.8.5"
serde = { version = "1.0.228", features = ["derive"], optional = true }
serde_json = { version = "1.0.149", optional = true }
