[package]
name = "solitaire-solver"
version = "0.1.0"
edition = "2021"

[dependencies]
lru = "0.16.3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.solitaire-game]
version = "0.2.0"
path = "../solitaire-game"
default-features = false
features = ["kplus"]
